language/tools/move-cli/tests/testsuite/compile_includes_stdlib/args.exp
Command `compile --check src/modules/UseSigner.move --mode bare -v`:
Checking Move files...
error[E03001]: unbound address
  ┌─ src/modules/UseSigner.move:2:7
  │
2 │   use Std::Signer;
  │       ^^^ Unbound address 'Std'

error[E03002]: unbound module
  ┌─ src/modules/UseSigner.move:2:7
  │
2 │   use Std::Signer;
  │       ^^^^^^^^^^^ Invalid 'use'. Unbound module: 'Std::Signer'

error[E03002]: unbound module
  ┌─ src/modules/UseSigner.move:5:5
  │
5 │     Signer::address_of(account)
  │     ^^^^^^ Unbound module alias 'Signer'

Command `compile --check src/modules/UseSigner.move -v`:
Checking Move files...
Command `compile src/modules/UseSigner.move -v`:
Compiling Move files...
